load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test", "container_push")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/f110/bazel-example/tools/helloworld1",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "helloworld1",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    binary = ":helloworld1",
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
)

load("@io_bazel_rules_docker//container:container.bzl", "container_push")
container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "registry.dev.bcnl.work",
    repository = "templain/bazel-helloworld",
    stamp = True,
    tag = "{BUILD_TIMESTAMP}",
)

